// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dialog > should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<div
  aria-label="Dialog"
  class="rmd-dialog rmd-dialog--outline rmd-dialog--centered"
  id="dialog-_r_0_"
  role="dialog"
  tabindex="-1"
/>
`;

exports[`Dialog > should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<div
  aria-label="Dialog"
  class="rmd-dialog rmd-dialog--outline rmd-dialog--centered custom-class-name"
  id="dialog-_r_0_"
  role="dialog"
  style="color: white;"
  tabindex="-1"
/>
`;

exports[`Dialog > should be able to render as a full-page dialog by setting the type prop to full-page 1`] = `
<div
  class="rmd-dialog-container rmd-dialog-container--centered"
  data-testid="container"
>
  <div
    aria-label="Dialog"
    class="rmd-dialog rmd-dialog--outline rmd-dialog--centered"
    id="dialog-_r_a_"
    role="dialog"
    tabindex="-1"
  >
    <button
      class="rmd-button rmd-button--text rmd-interaction-surface"
      type="button"
    >
      <span>
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Dialog > should be able to render as a full-page dialog by setting the type prop to full-page 2`] = `
<div
  aria-label="Dialog"
  class="rmd-dialog rmd-dialog--full-page"
  id="dialog-_r_a_"
  role="dialog"
  tabindex="-1"
>
  <button
    class="rmd-button rmd-button--text rmd-interaction-surface"
    type="button"
  >
    <span>
      Close
    </span>
  </button>
</div>
`;

exports[`Dialog > should be able to render as a modal with the correct accessibility 1`] = `
<span
  class="rmd-overlay rmd-overlay--visible rmd-box rmd-box--gap rmd-box--wrap rmd-box--align-center rmd-box--justify-center rmd-overlay--active"
  data-testid="overlay"
/>
`;

exports[`Dialog > should handle nested dialogs by preventing the overlay and box-shadow from getting darker as more dialogs become visible 1`] = `"rmd-overlay rmd-overlay--visible rmd-overlay--clickable rmd-box rmd-box--gap rmd-box--wrap rmd-box--align-center rmd-box--justify-center rmd-overlay--active"`;

exports[`Dialog > should handle nested dialogs by preventing the overlay and box-shadow from getting darker as more dialogs become visible 2`] = `"rmd-dialog rmd-dialog--outline rmd-dialog--centered"`;

exports[`Dialog > should handle nested dialogs by preventing the overlay and box-shadow from getting darker as more dialogs become visible 3`] = `"rmd-overlay rmd-overlay--visible rmd-overlay--clickable rmd-box rmd-box--gap rmd-box--wrap rmd-box--align-center rmd-box--justify-center"`;

exports[`Dialog > should handle nested dialogs by preventing the overlay and box-shadow from getting darker as more dialogs become visible 4`] = `"rmd-overlay rmd-overlay--visible rmd-overlay--clickable rmd-box rmd-box--gap rmd-box--wrap rmd-box--align-center rmd-box--justify-center rmd-overlay--active"`;

exports[`Dialog > should handle nested dialogs by preventing the overlay and box-shadow from getting darker as more dialogs become visible 5`] = `"rmd-dialog rmd-dialog--outline rmd-dialog--centered rmd-dialog--no-box-shadow"`;

exports[`Dialog > should handle nested dialogs by preventing the overlay and box-shadow from getting darker as more dialogs become visible 6`] = `"rmd-dialog rmd-dialog--outline rmd-dialog--centered"`;

exports[`Dialog > should handle nested dialogs by preventing the overlay and box-shadow from getting darker as more dialogs become visible 7`] = `"rmd-overlay rmd-overlay--visible rmd-overlay--clickable rmd-box rmd-box--gap rmd-box--wrap rmd-box--align-center rmd-box--justify-center"`;

exports[`Dialog > should handle nested dialogs by preventing the overlay and box-shadow from getting darker as more dialogs become visible 8`] = `"rmd-overlay rmd-overlay--visible rmd-overlay--clickable rmd-box rmd-box--gap rmd-box--wrap rmd-box--align-center rmd-box--justify-center"`;

exports[`Dialog > should handle nested dialogs by preventing the overlay and box-shadow from getting darker as more dialogs become visible 9`] = `"rmd-dialog rmd-dialog--outline rmd-dialog--centered rmd-dialog--no-box-shadow"`;

exports[`Dialog > should handle nested dialogs by preventing the overlay and box-shadow from getting darker as more dialogs become visible 10`] = `"rmd-dialog rmd-dialog--outline rmd-dialog--centered rmd-dialog--no-box-shadow"`;

exports[`dialog class name utility > should be callable with no arguments 1`] = `"rmd-dialog rmd-dialog--centered"`;
